--- a/ui/main.ui
+++ b/ui/main.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>212</width>
+    <width>209</width>
     <height>856</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>HTT</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QTabWidget" name="tabWidget">
@@ -1866,7 +1866,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>212</width>
+     <width>209</width>
      <height>23</height>
     </rect>
    </property>
