--- a/ui/main.ui
+++ b/ui/main.ui
@@ -192,7 +192,7 @@
         <string>log server</string>
        </property>
       </widget>
-      <widget class="QPushButton" name="pushButton_2">
+      <widget class="QPushButton" name="D1_btn_7">
        <property name="geometry">
         <rect>
          <x>10</x>
@@ -205,7 +205,7 @@
         <string>待开发</string>
        </property>
       </widget>
-      <widget class="QPushButton" name="pushButton_3">
+      <widget class="QPushButton" name="D1_btn_6">
        <property name="geometry">
         <rect>
          <x>100</x>
@@ -218,7 +218,7 @@
         <string>待开发</string>
        </property>
       </widget>
-      <widget class="QPushButton" name="pushButton_4">
+      <widget class="QPushButton" name="D1_btn_8">
        <property name="geometry">
         <rect>
          <x>100</x>
@@ -406,7 +406,7 @@
         <rect>
          <x>10</x>
          <y>70</y>
-         <width>71</width>
+         <width>41</width>
          <height>23</height>
         </rect>
        </property>
@@ -417,14 +417,27 @@
       <widget class="QPushButton" name="D1_btn_pset">
        <property name="geometry">
         <rect>
-         <x>90</x>
+         <x>120</x>
          <y>70</y>
-         <width>81</width>
+         <width>51</width>
          <height>23</height>
         </rect>
        </property>
        <property name="text">
         <string>设置P值</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="D1_btn_ptxt">
+       <property name="geometry">
+        <rect>
+         <x>60</x>
+         <y>70</y>
+         <width>51</width>
+         <height>23</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>P值表</string>
        </property>
       </widget>
      </widget>
@@ -861,7 +874,7 @@
         <rect>
          <x>10</x>
          <y>70</y>
-         <width>71</width>
+         <width>41</width>
          <height>23</height>
         </rect>
        </property>
@@ -872,14 +885,27 @@
       <widget class="QPushButton" name="D2_btn_pset">
        <property name="geometry">
         <rect>
-         <x>90</x>
+         <x>120</x>
          <y>70</y>
-         <width>81</width>
+         <width>51</width>
          <height>23</height>
         </rect>
        </property>
        <property name="text">
         <string>设置P值</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="D2_btn_ptxt">
+       <property name="geometry">
+        <rect>
+         <x>60</x>
+         <y>70</y>
+         <width>51</width>
+         <height>23</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>P值表</string>
        </property>
       </widget>
      </widget>
@@ -1332,7 +1358,7 @@
         <rect>
          <x>10</x>
          <y>70</y>
-         <width>71</width>
+         <width>41</width>
          <height>23</height>
         </rect>
        </property>
@@ -1343,14 +1369,27 @@
       <widget class="QPushButton" name="D3_btn_pset">
        <property name="geometry">
         <rect>
-         <x>90</x>
+         <x>120</x>
          <y>70</y>
-         <width>81</width>
+         <width>51</width>
          <height>23</height>
         </rect>
        </property>
        <property name="text">
         <string>设置P值</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="D3_btn_ptxt">
+       <property name="geometry">
+        <rect>
+         <x>60</x>
+         <y>70</y>
+         <width>51</width>
+         <height>23</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>P值表</string>
        </property>
       </widget>
      </widget>
@@ -1787,7 +1826,7 @@
         <rect>
          <x>10</x>
          <y>70</y>
-         <width>71</width>
+         <width>41</width>
          <height>23</height>
         </rect>
        </property>
@@ -1798,14 +1837,27 @@
       <widget class="QPushButton" name="D4_btn_pset">
        <property name="geometry">
         <rect>
-         <x>90</x>
+         <x>120</x>
          <y>70</y>
-         <width>81</width>
+         <width>51</width>
          <height>23</height>
         </rect>
        </property>
        <property name="text">
         <string>设置P值</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="D4_btn_ptxt">
+       <property name="geometry">
+        <rect>
+         <x>60</x>
+         <y>70</y>
+         <width>51</width>
+         <height>23</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>P值表</string>
        </property>
       </widget>
      </widget>
