--- a/ui/syslog.ui
+++ b/ui/syslog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>750</width>
+    <width>933</width>
     <height>449</height>
    </rect>
   </property>
@@ -19,7 +19,7 @@
      <rect>
       <x>10</x>
       <y>40</y>
-      <width>731</width>
+      <width>911</width>
       <height>351</height>
      </rect>
     </property>
@@ -48,6 +48,19 @@
     </property>
     <property name="text">
      <string>全部复制</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="syslog_btn_save">
+    <property name="geometry">
+     <rect>
+      <x>390</x>
+      <y>400</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>全部保存</string>
     </property>
    </widget>
   </widget>
