--- a/ui/abyss.ui
+++ b/ui/abyss.ui
@@ -218,6 +218,19 @@
     </property>
    </widget>
   </widget>
+  <widget class="QLabel" name="label_info">
+   <property name="geometry">
+    <rect>
+     <x>540</x>
+     <y>20</y>
+     <width>241</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>提示信息在此显示</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
