为syslog calllog界面添加图标

--- a/ui/abyss.ui
+++ b/ui/abyss.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>HTT - abyss</string>
   </property>
   <widget class="QTableWidget" name="tableWidget">
    <property name="geometry">
@@ -77,9 +77,9 @@
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>440</x>
+     <x>430</x>
      <y>50</y>
-     <width>351</width>
+     <width>361</width>
      <height>81</height>
     </rect>
    </property>
@@ -102,9 +102,9 @@
    <widget class="QLineEdit" name="text_jenkins_url">
     <property name="geometry">
      <rect>
-      <x>90</x>
+      <x>80</x>
       <y>20</y>
-      <width>251</width>
+      <width>271</width>
       <height>20</height>
      </rect>
     </property>
@@ -112,9 +112,9 @@
    <widget class="QComboBox" name="box_save_rom_path">
     <property name="geometry">
      <rect>
-      <x>90</x>
+      <x>80</x>
       <y>50</y>
-      <width>161</width>
+      <width>181</width>
       <height>22</height>
      </rect>
     </property>
@@ -135,7 +135,7 @@
    <widget class="QPushButton" name="btn_download_dailyt_rom">
     <property name="geometry">
      <rect>
-      <x>260</x>
+      <x>270</x>
       <y>50</y>
       <width>81</width>
       <height>23</height>
@@ -149,9 +149,9 @@
   <widget class="QGroupBox" name="groupBox_2">
    <property name="geometry">
     <rect>
-     <x>440</x>
+     <x>430</x>
      <y>140</y>
-     <width>351</width>
+     <width>361</width>
      <height>80</height>
     </rect>
    </property>
@@ -161,9 +161,9 @@
    <widget class="QLineEdit" name="text_output_path">
     <property name="geometry">
      <rect>
-      <x>90</x>
+      <x>80</x>
       <y>20</y>
-      <width>251</width>
+      <width>271</width>
       <height>20</height>
      </rect>
     </property>
@@ -184,9 +184,9 @@
    <widget class="QComboBox" name="box_save_output_path">
     <property name="geometry">
      <rect>
-      <x>90</x>
+      <x>80</x>
       <y>50</y>
-      <width>161</width>
+      <width>181</width>
       <height>22</height>
      </rect>
     </property>
@@ -194,7 +194,7 @@
    <widget class="QPushButton" name="btn_download_output">
     <property name="geometry">
      <rect>
-      <x>260</x>
+      <x>270</x>
       <y>50</y>
       <width>81</width>
       <height>23</height>
