--- a/ui/abyss.ui
+++ b/ui/abyss.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>844</width>
+    <width>1113</width>
     <height>684</height>
    </rect>
   </property>
@@ -17,9 +17,9 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>50</y>
-     <width>411</width>
-     <height>621</height>
+     <y>10</y>
+     <width>691</width>
+     <height>661</height>
     </rect>
    </property>
    <property name="gridStyle">
@@ -29,7 +29,7 @@
     <number>0</number>
    </property>
    <property name="columnCount">
-    <number>4</number>
+    <number>6</number>
    </property>
    <attribute name="horizontalHeaderCascadingSectionResizes">
     <bool>false</bool>
@@ -60,11 +60,21 @@
      <string>版本号</string>
     </property>
    </column>
+   <column>
+    <property name="text">
+     <string>app</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>state</string>
+    </property>
+   </column>
   </widget>
   <widget class="QPushButton" name="btn_refresh">
    <property name="geometry">
     <rect>
-     <x>300</x>
+     <x>710</x>
      <y>10</y>
      <width>121</width>
      <height>31</height>
@@ -77,7 +87,7 @@
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>430</x>
+     <x>710</x>
      <y>50</y>
      <width>391</width>
      <height>81</height>
@@ -162,7 +172,7 @@
   <widget class="QGroupBox" name="groupBox_2">
    <property name="geometry">
     <rect>
-     <x>430</x>
+     <x>710</x>
      <y>140</y>
      <width>391</width>
      <height>80</height>
@@ -247,7 +257,7 @@
   <widget class="QLabel" name="label_info">
    <property name="geometry">
     <rect>
-     <x>540</x>
+     <x>860</x>
      <y>20</y>
      <width>241</width>
      <height>16</height>
@@ -256,6 +266,81 @@
    <property name="text">
     <string>提示信息在此显示</string>
    </property>
+  </widget>
+  <widget class="QGroupBox" name="groupBox_3">
+   <property name="geometry">
+    <rect>
+     <x>710</x>
+     <y>230</y>
+     <width>391</width>
+     <height>141</height>
+    </rect>
+   </property>
+   <property name="title">
+    <string>abyss批量操作</string>
+   </property>
+   <widget class="QLineEdit" name="text_abyss_upgrade_url">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>20</y>
+      <width>251</width>
+      <height>20</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>20</y>
+      <width>71</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>   升级url</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_abyss_upgrade">
+    <property name="geometry">
+     <rect>
+      <x>340</x>
+      <y>20</y>
+      <width>41</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>升级</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_abyss_factory">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>50</y>
+      <width>61</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>恢复出厂</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_abyss_reboot">
+    <property name="geometry">
+     <rect>
+      <x>150</x>
+      <y>50</y>
+      <width>61</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>重启</string>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
